--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ sqlalchemy = "^2.0.25"
 psycopg2-binary = "^2.9.9"
 alembic = "^1.13.1"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
-passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+passlib = {extras = ["argon2"], version = "^1.7.4"}
 python-multipart = "^0.0.6"
 pydantic = {extras = ["email"], version = "^2.5.3"}
 pydantic-settings = "^2.1.0"
