--- a/fly.toml
+++ b/fly.toml
@@ -1,12 +1,16 @@
-# fly.toml app configuration file generated for fast-quizz-app on 2025-12-19T00:48:20Z
+# fly.toml app configuration file generated for fast-quizz-app-broken-sun-2310 on 2025-12-18T21:57:40-03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'fast-quizz-app'
+app = 'fast-quizz-app-broken-sun-2310'
 primary_region = 'gru'
 
 [build]
+
+[[mounts]]
+  source = 'data'
+  destination = '/app/data'
 
 [http_service]
   internal_port = 8000
@@ -18,6 +22,5 @@ primary_region = 'gru'
 
 [[vm]]
   memory = '1gb'
-  cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
