--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-multipart = "^0.0.6"
 pydantic = {extras = ["email"], version = "^2.5.3"}
 pydantic-settings = "^2.1.0"
 python-dotenv = "^1.0.0"
+aiosqlite = "^0.22.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
