--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL=postgresql://quizz_user:quizz_password@db:5432/quizz_db
+DATABASE_URL=postgresql://quizz_user:quizz_password@localhost:5432/quizz_db
 
 # JWT Authentication
 SECRET_KEY=your-secret-key-change-this-in-production
