--- a/alembic.ini
+++ b/alembic.ini
@@ -58,7 +58,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://quizz_user:quizz_password@localhost:5432/quizz_db
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 [post_write_hooks]
